# rchronos

./: .gitignore  Cargo.toml  README.md
rchronos-windows/: Cargo.toml
rchronos-windows/src/: event_log.rs  lib.rs  registry.rs  time.rs
service/: Cargo.toml  build.rs
service/src/: actor.rs  config.rs  main.rs  sync.rs  web.rs  windows_service.rs
service/src/sync/: fetch.rs
shared/: Cargo.toml
shared/src/: lib.rs
web/: Cargo.toml  index.html
web/src/: main.rs  service.rs  shell.rs  views.rs
web/src/views/: helpers.rs  pages.rs  panels.rs
