[workspace]
members = [
    "shared",
    "service",
    "web",
    "rchronos-windows",
]

resolver = "3"

[workspace.lints.rust]
warnings = "deny"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Shao G. <shaog.me@gmail.com>"]
repository = "https://github.com/shaogme/rchronos"
homepage = "https://github.com/shaogme/rchronos"

[workspace.dependencies]
rchronos-shared = { path = "shared" }
rchronos-windows = { path = "rchronos-windows" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "unwind"

