[package]
name = "rchronos-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_EventLog",
] }

[lints]
workspace = true
