[package]
name = "rchronos-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"
httpdate = "1.0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["signal", "rt-multi-thread"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

rchronos-shared.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
tracing-appender = "0.2.5"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_EventLog",
] }
