[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
silex = { version = "0.1.0-beta.3", features = ["net", "json", "persistence"] }
toml = "1.1.2"
rchronos-shared.workspace = true

[lints]
workspace = true
