[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
silex = { version = "0.1.0-beta.9", features = ["net", "json", "persistence"] }
toml = "1.1.2"
rchronos-shared.workspace = true

[lints]
workspace = true
